# advent-of-code

./: .pre-commit-config.yaml  README.md  pyproject.toml
2015/01/: day01.py
2015/02/: day02.py
2015/03/: day03.py
2015/04/: day04.py
2015/05/: day05.py
2015/06/: day06.py
2015/07/: day07.py
2015/08/: day08.py
2015/09/: day09.py
2015/10/: day10.py
2015/11/: day11.py
2015/12/: day12.py
2015/13/: day13.py
2015/14/: day14.py
2015/15/: day15.py
2015/16/: day16.py
2015/17/: day17.py
2015/18/: day18.py
2015/19/: day19.py
2015/20/: day20.py
2015/21/: day21.py
2015/22/: day22.py
2015/23/: day23.py
2015/24/: day24.py
2015/25/: day25.py
2016/01/: day01.py
2016/02/: day02.py
2016/03/: day03.py
2016/04/: day04.py
2016/05/: day05.py
2016/06/: day06.py
2016/07/: day07.py
2016/08/: day08.py
2016/09/: day09.py
2016/10/: day10.py
2016/11/: day11.py
2016/12/: day12.py
2016/13/: day13.py
2016/14/: day14.py
2016/15/: day15.py
2016/16/: day16.py
2016/17/: day17.py
src/advent_of_code/: __init__.py
