[project]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to Advent of Code problems"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["advent-of-code-data>=2.0.1"]

[project.scripts]
next-day = "advent_of_code:initialise_next_day"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "COM812",
  "D",
  "DTZ002",
  "EM101",
  "INP001",
  "ISC001",
  "PLR2004",
  "S324",
  "T201",
  "TRY003",
]
select = ["ALL"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
